fix: Fixed navbar burger icon not showing up

--- a/userreviews/static/userreviews/css/style.css
+++ b/userreviews/static/userreviews/css/style.css
@@ -28,7 +28,7 @@ a {
   color: #1b1b21;
 }
 .nav-link {
-  color: #f3ad13;
+  color: #f3ad13 !important;
 }
 .input-form {
   background-color: #f8f9fa;
